# Open-vocabulary-Action-Recognition-with-CLIP

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.app  Dockerfile.train  README.md  ROADMAP.md  __init__.py  custom_evaluate.py  docker-compose.yml  dvc.yaml  evaluate.py  launch_distributed.py  mkdocs.yml  mlflow.db  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_mlflow.py  test_mlflow_connection.py  train.py
app/: __init__.py  app.py
configs/: __init__.py  custom_config.py  default.py
data/: __init__.py  augmentation.py  preprocessing.py
deployment/: __init__.py  export.py  export_clip_model.py  optimization.py
docker/: Dockerfile  README.md  docker-compose.yml
docs/: README.md  api_reference.md  architecture.md  architecture_ascii.md  architecture_better_diagrams.md  architecture_redesign.md  architecture_refined.md  development_guide.md  docker_guide.md  dvc_guide.md  experiment_tracking.md  huggingface_integration_guide.md  manual_testing_guide.md  training_guide.md
evaluation/: __init__.py  evaluator.py  metrics.py  visualization.py
kubernetes/: README.md  clip-har-inference.yaml  clip-har-monitoring.yaml
mlops/: __init__.py  automated_training.py  deploy.py  dvc_utils.py  huggingface_hub_utils.py  inference_serving.py  tracking.py
models/: __init__.py  clip_model.py
pipeline/: README.md  __init__.py  batch_inference.py  inference_pipeline.py  training_pipeline.py
scripts/: download_dataset.py  filter_dataset.py  quick_train.bat  quick_train_push.py
tests/: __init__.py  conftest.py  run_tests.py
(+25 files in other folders)
